testsuite/tests/polykinds/BadKindVar.stderr

BadKindVar.hs:8:21: error:
    Unexpected kind variable ‘k’
    Perhaps you intended to use PolyKinds
    In the type signature for ‘f’
